--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -99,7 +99,7 @@
                 <li class="list-group-item d-flex justify-content-between" th:each="member : ${group.getMembers()}">
                     <div>
                         <span th:text="${member.getGivenname()  + ' ' + member.getFamilyname().charAt(0) + '.'}"></span>
-                        <span th:replace="~{fragments/gruppen :: userbadges}"></span>
+                        <span th:replace="~{fragments/groups :: userbadges}"></span>
                     </div>
 
                     <div class="d-flex">
