--- a/src/main/resources/templates/fragments/groups.html
+++ b/src/main/resources/templates/fragments/groups.html
@@ -5,14 +5,18 @@
 <!--Grouptype Badges-->
 <th:block th:fragment="badges">
     <span class="badge badge-pill private"
+          title="Kann nicht über die Suche gefunden werden, beitritt ist per Einladungslink möglich."
           th:if='${group.getType() == private}'>Privat</span>
     <span class="badge badge-pill public"
+          title="Kann über die Suche gefunden werden, jeder kann beitreten."
           th:if="${group.getType() == public}">Öffentlich</span>
     <span class="badge badge-pill lecture"
+          title="Offizielle Veranstaltung"
           th:if='${group.getType() == lecture}'>Veranstaltung</span>
 
     <span class="badge badge-pill parent"
           th:unless="${parent == null || parent.getTitle() == null|| parent.getTitle() == ''}"
+          th:title="${'Die Gruppe gehört zur Veranstaltung ' + parent.getTitle() + '.'}"
           th:text="${parent.getTitle()}">Parent</span>
 
     <!--Needs completly projected (cached) groups-->
@@ -41,26 +45,24 @@
     <!--<div class="content-text-in" th:if="${group.getMembers().contains(user.getId())}"></div>-->
 </th:block>
 
+<!--Buttonbar zum Gruppe beitreten-->
 <th:block th:fragment="joingroup">
-    <div class="content-heading" th:if="${group.getMembers().size() < group.getUserLimit()}">
-        <span>Möchtest du dieser Gruppe beitreten?</span>
+    <div class="content-heading">
+        <span th:if="${group.getMembers().size() < group.getUserLimit()}">
+            Möchtest du dieser Gruppe beitreten?
+        </span>
+        <span th:unless="${group.getMembers().size() < group.getUserLimit()}">
+            Diese Gruppe hat ihre maximale Teilnehmeranzahl erreicht.
+        </span>
     </div>
-    <div class="row" th:if="${group.getMembers().size() < group.getUserLimit()}">
-        <form method="post" th:action="@{/gruppen2/details/{id}/join(id = ${group.getId()})}">
+
+    <div class="row">
+        <form method="post" th:action="@{/gruppen2/details/{id}/join(id = ${group.getId()})}"
+              th:if="${group.getMembers().size() < group.getUserLimit()}">
             <button class="btn btn-success" type="submit">Gruppe beitreten.</button>
         </form>
 
-        <div class="col"></div>
-
-        <a class="btn btn-warning" href="/gruppen2"
-           type="submit">Nicht beitreten.</a>
-    </div>
-
-    <div class="content-heading" th:unless="${group.getMembers().size() < group.getUserLimit()}">
-        <span>Diese Gruppe hat ihre maximale Teilnehmeranzahl erreicht.</span>
-    </div>
-    <div class="row" th:unless="${group.getMembers().size() < group.getUserLimit()}">
-        <div class="col"></div>
+        <div class="col" th:if="${group.getMembers().size() < group.getUserLimit()}"></div>
 
         <a class="btn btn-primary" href="/gruppen2"
            type="submit">Startseite.</a>
