--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,12 +17,12 @@
         <div class="content" th:each="group: ${groups}">
             <div class="content-heading row">
                 <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
-                   th:text="${group.getTitle()}"></a>
+                   th:text="${group.getTitle().getGroupTitle()}"></a>
 
                 <span th:replace="~{fragments/groups :: badges}"></span>
             </div>
             <div class="content-text-in">
-                <span th:text="${group.getDescription()}"></span>
+                <span th:text="${group.getDescription().getGroupDescription()}"></span>
             </div>
         </div>
 
