--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,8 @@
         <!--Gruppenliste belegte Gruppen-->
         <div class="content" th:each="group: ${groups}">
             <div class="content-heading row">
-                <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
-                   th:text="${group.getTitle().getGroupTitle()}"></a>
+                <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getGroupid()})}"
+                   th:text="${group.getTitle()}"></a>
 
                 <span th:replace="~{fragments/groups :: badges}"></span>
             </div>
