--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -11,7 +11,7 @@
 <main th:fragment="bodycontent">
     <div class="container-fluid">
 
-        <h1 class="def-cursor" th:text="${group.getTitle().getGroupTitle()}"></h1>
+        <h1 class="def-cursor" th:text="${group.getTitle()}"></h1>
 
         <div class="row">
             <!--Gruppendetails-->
@@ -27,7 +27,7 @@
                         <!--Spacer-->
                         <span class="col"></span>
 
-                        <form method="post" th:action="@{/gruppen2/details/{id}/leave(id=${group.getId()})}">
+                        <form method="post" th:action="@{/gruppen2/details/{id}/leave(id=${group.getGroupid()})}">
                             <button class="btn btn-danger btn-bar" type="submit">Gruppe verlassen
                             </button>
                         </form>
@@ -40,13 +40,13 @@
                 <!--Anzahl Text-->
                 <div class="mb-2">
                     <span>Teilnehmer: </span>
-                    <span th:text="${group.getMembers().size() + ' von ' + group.getUserLimit().getUserLimit()}"></span>
+                    <span th:text="${group.getMembers().size() + ' von ' + group.getLimit().getUserLimit()}"></span>
                 </div>
 
                 <!--Bearbeiten-Button-->
-                <div class="mb-2" th:if="${group.getRoles().get(user.getId()) == admin}">
+                <div class="mb-2" th:if="${group.getRoles().get(user.getUserid()) == admin}">
                     <form method="get"
-                          th:action="@{/gruppen2/details/{id}/edit(id=${group.getId()})}">
+                          th:action="@{/gruppen2/details/{id}/edit(id=${group.getGroupid()})}">
                         <button class="btn btn-secondary btn-block">Gruppe verwalten</button>
                     </form>
                 </div>
