--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -11,7 +11,7 @@
             <span class="input-group-text text-monospace">Gruppentitel:</span>
         </div>
         <input type="text" class="form-control" name="groupTitle" minlength="4" maxlength="128"
-               th:value="${group?.getTitle()?.getGroupTitle()}" required>
+               th:value="${group?.getTitle()}" required>
     </div>
 
     <!--Gruppenbeschreibung-->
@@ -50,8 +50,8 @@
             <input type="hidden" id="parentdummy" name="parent" value="00000000-0000-0000-0000-000000000000" disabled>
             <select class="custom-select" id="parentselect" name="parent">
                 <option value="00000000-0000-0000-0000-000000000000" selected>Keiner</option>
-                <option th:each="lecture : ${lectures}" th:value="${lecture.getId()}"
-                        th:text="${lecture.getTitle().getGroupTitle()}"></option>
+                <option th:each="lecture : ${lectures}" th:value="${lecture.getGroupid()}"
+                        th:text="${lecture.getTitle()}"></option>
             </select>
         </div>
     </div>
@@ -62,16 +62,16 @@
     <label for="userlimit">Teilnehmeranzahl:</label>
     <div class="btn-toolbar row mx-0" id="userlimit">
         <input type="hidden" name="userLimit" id="limit" value="999999"
-               th:disabled="${group != null && group.getUserLimit().getUserLimit() < 999999} ? 'disabled' : 'false'">
+               th:disabled="${group != null && group.getLimit().getUserLimit() < 999999} ? 'disabled' : 'false'">
         <div class="btn-group btn-group-toggle col-sm-4 px-0" data-toggle="buttons">
             <label class="btn btn-secondary active" onclick="disable('#limitselect'); enable('#limit')">
                 <input type="radio"
-                       th:checked="${group != null && group.getUserLimit().getUserLimit() < 999999} ? 'false' : 'checked'">
+                       th:checked="${group != null && group.getLimit().getUserLimit() < 999999} ? 'false' : 'checked'">
                 Unbegrenzt
             </label>
             <label class="btn btn-secondary" onclick="enable('#limitselect'); disable('#limit')">
                 <input type="radio"
-                       th:checked="${group != null && group.getUserLimit().getUserLimit() < 999999} ? 'checked' : 'false'">
+                       th:checked="${group != null && group.getLimit().getUserLimit() < 999999} ? 'checked' : 'false'">
                 Begrenzt
             </label>
         </div>
@@ -82,9 +82,9 @@
                 <span class="input-group-text text-monospace">Limit:</span>
             </div>
             <input type="number" class="form-control" name="userLimit"
-                   th:value="${group != null} ? ${group.getUserLimit().getUserLimit()} : '999999'"
+                   th:value="${group != null} ? ${group.getLimit().getUserLimit()} : '999999'"
                    min="1" max="999999" id="limitselect" required
-                   th:disabled="${group != null && group.getUserLimit().getUserLimit() < 999999} ? 'false' : 'disabled'">
+                   th:disabled="${group != null && group.getLimit().getUserLimit() < 999999} ? 'false' : 'disabled'">
             <div class="input-group-append">
                 <span class="input-group-text text-monospace">Teilnehmer</span>
             </div>
