--- a/src/main/resources/templates/fragments/groups.html
+++ b/src/main/resources/templates/fragments/groups.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="de" xmlns:th="http://www.thymeleaf.org">
 
+<!--/*@thymesVar id="parent" type="mops.gruppen2.domain.model.group.Group"*/-->
+<!--/*@thymesVar id="group" type="mops.gruppen2.domain.model.group.Group"*/-->
+<!--/*@thymesVar id="member" type="mops.gruppen2.domain.model.group.User"*/-->
+
 <!--Grouptype Badges-->
 <th:block th:fragment="badges">
     <span class="badge badge-pill private"
@@ -14,7 +18,7 @@
           th:if='${group.isLecture()}'>Veranstaltung</span>
 
     <span class="badge badge-pill parent"
-          th:if="${parent != null && parent?.getTitle() != null && parent?.getTitle() != ''}"
+          th:if="${parent?.exists()}"
           th:title="${'Die Gruppe gehört zur Veranstaltung ' + parent.getTitle() + '.'}"
           th:text="${parent.getTitle()}">Parent</span>
 
@@ -27,7 +31,7 @@
 <!--User Badges-->
 <th:block th:fragment="userbadges">
     <span class="badge badge-success align-self-start ml-2"
-          th:if="${group.isAdmin(member.getUserid())}">Admin</span>
+          th:if="${group.isAdmin(member.getId())}">Admin</span>
 </th:block>
 
 <th:block th:fragment="groupcontent">
@@ -56,7 +60,7 @@
     </div>
 
     <div class="row">
-        <form method="post" th:action="@{/gruppen2/details/{id}/join(id = ${group.getGroupId()})}"
+        <form method="post" th:action="@{/gruppen2/details/{id}/join(id = ${group.getId()})}"
               th:unless="${group.isFull()}">
             <button class="btn btn-success" type="submit">Gruppe beitreten.</button>
         </form>
