--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <!--Bearbeiten-Button-->
-                <div class="mb-2" th:if="${group.isAdmin(user.getId())}">
+                <div class="mb-2" th:if="${group.isAdmin(principal.getId())}">
                     <form method="get"
                           th:action="@{/gruppen2/details/{id}/edit(id=${group.getId()})}">
                         <button class="btn btn-secondary btn-block">Gruppe verwalten</button>
@@ -56,7 +56,7 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between"
                             th:each="member : ${group.getMembers()}">
-                            <span th:text="${member}"></span>
+                            <span th:text="${member.format()}"></span>
                             <span th:replace="~{fragments/groups :: userbadges}"></span>
                         </li>
                     </ul>
