order my groups by type

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,19 +13,52 @@
 
         <h1 class="def-cursor">Meine Gruppen</h1>
 
+        <!--TODO: Fragment-->
         <!--Gruppenliste belegte Gruppen-->
-        <div class="content" th:each="group: ${groups}">
-            <div class="content-heading row">
-                <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
-                   th:text="${group.getTitle()}"></a>
+        <div th:unless="${lectures.isEmpty()}">
+            <h3 class="def-cursor">Veranstaltungen</h3>
+            <div class="content" th:each="group: ${lectures}">
+                <div class="content-heading row">
+                    <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
+                       th:text="${group.getTitle()}"></a>
 
-                <span th:replace="~{fragments/groups :: badges}"></span>
-            </div>
-            <div class="content-text-in">
-                <span th:text="${group.getDescription()}"></span>
+                    <span th:replace="~{fragments/groups :: badges}"></span>
+                </div>
+                <div class="content-text-in">
+                    <span th:text="${group.getDescription()}"></span>
+                </div>
             </div>
         </div>
 
+        <div th:unless="${publics.isEmpty()}">
+            <h3 class="def-cursor">Öffentliche Gruppen</h3>
+            <div class="content" th:each="group: ${publics}">
+                <div class="content-heading row">
+                    <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
+                       th:text="${group.getTitle()}"></a>
+
+                    <span th:replace="~{fragments/groups :: badges}"></span>
+                </div>
+                <div class="content-text-in">
+                    <span th:text="${group.getDescription()}"></span>
+                </div>
+            </div>
+        </div>
+
+        <div th:unless="${privates.isEmpty()}">
+            <h3 class="def-cursor">Private Gruppen</h3>
+            <div class="content" th:each="group: ${privates}">
+                <div class="content-heading row">
+                    <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
+                       th:text="${group.getTitle()}"></a>
+
+                    <span th:replace="~{fragments/groups :: badges}"></span>
+                </div>
+                <div class="content-text-in">
+                    <span th:text="${group.getDescription()}"></span>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
