--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -27,18 +27,8 @@
         </div>
 
         <!--Ergebnisliste-->
-        <div class="content" th:each="group: ${groups}">
-            <div class="content-heading row">
-                <span th:replace="~{fragments/groups :: badges}"></span>
-
-                <a class="link col" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
-                   th:text="${group.getTitle()}"></a>
-            </div>
-            <div class="content-text-in">
-                <span th:text="${group.getDescription()}"></span>
-            </div>
-        </div>
-
+        <div class="content" th:each="group: ${groups}"
+             th:insert="fragments/groups :: groupcontentlink"></div>
     </div>
 </main>
 
